...
@HiltViewModel
class LandingScreenViewModel @Inject constructor(
    private val patientRepository: PatientRepository
) : BaseViewModel() {

    var isLaunched by mutableStateOf(false)
    val items = listOf("My Patients", "Queue", "Profile")
    var isSearching by mutableStateOf(false)
    var isSearchResult by mutableStateOf(false)
    var searchQuery by mutableStateOf("")
    var selectedIndex by mutableStateOf(0)
    lateinit var patientList: Flow<PagingData<PatientResponse>>
    lateinit var lazyPatientsList: Flow<PagingData<PatientResponse>>
...
