...
    <string name="vaccination">Vaccination</string>
    <string name="vaccination_info">%d upcoming, %d missed, %d taken</string>

    <string name="search_patients">Search patients</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search">Search</string>
    <string name="search_helper_text">Search using any of the field below</string>
    <string name="select_age_range">Select age range</string>
    <string name="patient_id">Patient ID</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_name_error_msg">Name length should be between 3 and 100.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
...
